# AgentShield

./: README.md  agentshield_audit.db  pyproject.toml  requirements.txt  run_demo.py
agentshield/: __init__.py  demo.py  mock_tools.py  models.py  scenarios.py
agentshield.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
agentshield/audit/: __init__.py  feedback.py  logger.py  storage.py
agentshield/classifier/: __init__.py  engine.py  prompts.py  tier1_rules.py  tier2_anthropic.py  tier2_llm.py
agentshield/dashboard/: __init__.py  app.py
agentshield/interceptor/: __init__.py  autogen_handler.py  base.py  crewai_handler.py  langchain_mw.py
agentshield/policy/: __init__.py  default_policy.yaml  engine.py  human_approval.py  rules.py
tests/: __init__.py  test_audit.py  test_irl.py  test_policy.py  test_scenarios.py  test_tier1.py
